New bridge tool; bowtie crossing when destination edges form one half of an 'X' #35578

Closed
opened 2013-05-31 01:44:44 +02:00 by Adam Friesen · 4 comments

%%%Before I start, let me say that I really like the new bridge tool and that, for a number of cases, it seems pretty smart.

However, there is one case where I can't help but notice it being really dumb, take the .blend for example. Inside the .blend is edges already selected, what's significant here is when you invoke the bridge tool, the filled in faces will cross over each other and look like a bowtie instead of neat geometry.

To reproduce in your own file, create two sets of edges with an odd number of vertexes, and position the vertexes in a way where each of them form one half of an 'X' (ie. they form an X if the centers are joined together).

I can't help but notice if the bridge tool code should do a straight check for a companion edge when projecting in the direction of the loop before it tries anything fancy, because the loops for one thing are still perfectly aligned.

This was tested in the MingW build from the buildbot built on the 29th of May, this did not exist in 2.67 or earlier simply because the tool that does this was not developed yet, the build being MingW shouldn't matter either because I have never recalled differences in the behavior of the tools when I used vanilla VC 2008 builds.

This was discovered on a system with 16 Gigs of RAM, an i7 Ivy Bridge processor, and an HD 7xxx ATI card with drivers from last February.

Thank you for looking into it.%%%

%%%Before I start, let me say that I really like the new bridge tool and that, for a number of cases, it seems pretty smart. However, there is one case where I can't help but notice it being really dumb, take the .blend for example. Inside the .blend is edges already selected, what's significant here is when you invoke the bridge tool, the filled in faces will cross over each other and look like a bowtie instead of neat geometry. To reproduce in your own file, create two sets of edges with an odd number of vertexes, and position the vertexes in a way where each of them form one half of an 'X' (ie. they form an X if the centers are joined together). I can't help but notice if the bridge tool code should do a straight check for a companion edge when projecting in the direction of the loop before it tries anything fancy, because the loops for one thing are still perfectly aligned. This was tested in the MingW build from the buildbot built on the 29th of May, this did not exist in 2.67 or earlier simply because the tool that does this was not developed yet, the build being MingW shouldn't matter either because I have never recalled differences in the behavior of the tools when I used vanilla VC 2008 builds. This was discovered on a system with 16 Gigs of RAM, an i7 Ivy Bridge processor, and an HD 7xxx ATI card with drivers from last February. Thank you for looking into it.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r57159.%%%

%%%fixed r57159.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%fix wasn't right, real fix r57163%%%

%%%fix wasn't right, real fix r57163%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35578
No description provided.