fix [#35578] New bridge tool; bowtie crossing when destination edges form one half of an 'X'